2008-05-12	Dmitry Dulepov	<dmitry@typo3.org>

	* RFC #8338: "Catchable fatal error" still exists

	RELEASE OF TEMPLAVOILA 1.3.5

2008-04-13	Dmitry Dulepov	<dmitry@typo3.org>

	* Added ability to hide FCE

2008-02-25	Dmitry Dulepov	<dmitry@typo3.org>

	RELEASE OF TEMPLAVOILA 1.3.4

~ Cleanup, added @var in pi1
# Fixed bug #7644: Mapping in gets lost in different ways everytime you enter the mapping interface
~ Small adjustments after #6648
~ Added some XCLASS definitions to make EM happy

2008-02-04  Dmitry Dulepov  <dmitry@typo3.org>

# Fixed catchable error in t3lib_div with TYPO3 4.2

2008-02-01  Kasper Skaarhoej <kasper2008@typo3.com>

+ Added sorting of arrays in the cleaner-class. Good for diff'able reports from lowlevel_cleaner

2007-12-25  Dmitry Dulepov  <dmitry@typo3.org>

# Added information about switching off mbstring.func_overload into manual

2007-12-14  Dmitry Dulepov  <dmitry@typo3.org>

# Fixed error messages in case if xml structure is wrong

2007-10-06  Dmitry Dulepov  <dmitry@typo3.org>

# Fixed bug 6648: TCEmain hook does not use colPos to select where to put new content element

2007-10-19  Kasper Skaarhoej <kasper2007@typo3.com>

+ Added some checks for arrays to avoid possible PHP errors.

2007-10-17  Kasper Skaarhoej <kasper2007@typo3.com>

+ Added hook to display statistics about records in the page view. This is a global TYPO3 hook introduced in the core too and which is used by l10nmgr to show localization status for records.

2007-10-06  Dmitry Dulepov  <dmitry@typo3.org>

 + Added hook to display aditional infpormation about plugins in page module (TYPO3 4.2 new feature)

2007-07-12  Kasper Skaarhoej <kasper2007@typo3.com>
# Fixed issues related to cleaner-plug-in-script

2007-07-12  Kasper Skaarhoej <kasper2007@typo3.com>

# Fixed issues related to display of languages
+ Added class for cleaning out unused content elements on pages (hooks into the "lowlevel" cleaner CLI script)

2007-07-05  Dmitry Dulepov  <dmitry@typo3.org>
