@@ -1,3 +1,7 @@
+2008-08-13	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Changed the order of header parts - now they appear as the first member of page.headerData
+
 2008-05-12	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* RFC #8338: "Catchable fatal error" still exists
